# hw10_bulkmt

./: .travis.yml  CMakeLists.txt  README.md
include/: bulk_handlers.h  command.h  functions.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_bulk.cpp  test_data_integrity.cpp  test_helper.h  test_log.cpp  test_main.cpp  test_metrics.cpp
